basic layout and trying to get add

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-flux-starter",
+  "name": "rReact Google Adds Hackr",
   "version": "0.1.0",
-  "description": "Boilerplate what else?!",
+  "description": "hack trying to display safeframe adds serverd from google using react",
   "main": "src/main.jsx",
   "dependencies": {
     "babel-polyfill": "^6.0.16",
