--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.9.0",
     "extract-text-webpack-plugin": "^0.9.1",
+    "gh-pages": "^0.8.0",
     "html-webpack-plugin": "^1.7.0",
     "isparta": "^3.1.0",
     "isparta-loader": "^1.0.0",
