--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "buildingBlocks": "naglafar/buildingBlocks"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
